[gd_scene load_steps=2 format=2]

[ext_resource path="res://Screens/Overlays/BaseOverlay.gd" type="Script" id=1]

[node name="BaseOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -300.0
margin_right = -512.0
margin_bottom = -300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
exit_type = 3

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
